--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,10 @@
 eclipse.preferences.version=1
+encoding//mqo_exercises/__init__.py=utf-8
+encoding//mqo_exercises/__openerp__.py=utf-8
+encoding//mqo_exercises/controllers/__init__.py=utf-8
+encoding//mqo_exercises/controllers/controllers.py=utf-8
+encoding//mqo_exercises/models/__init__.py=utf-8
+encoding//mqo_exercises/models/exercise.py=utf-8
 encoding//openacademy/__init__.py=utf-8
 encoding//openacademy/__openerp__.py=utf-8
 encoding//openacademy/controllers.py=utf-8
