Added mqo.assignment and mqo.allocation models for exercises and partners.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,7 +4,10 @@ encoding//mqo_exercises/__openerp__.py=utf-8
 encoding//mqo_exercises/controllers/__init__.py=utf-8
 encoding//mqo_exercises/controllers/controllers.py=utf-8
 encoding//mqo_exercises/models/__init__.py=utf-8
+encoding//mqo_exercises/models/allocation.py=utf-8
+encoding//mqo_exercises/models/assignment.py=utf-8
 encoding//mqo_exercises/models/exercise.py=utf-8
+encoding//mqo_exercises/models/partner.py=utf-8
 encoding//openacademy/__init__.py=utf-8
 encoding//openacademy/__openerp__.py=utf-8
 encoding//openacademy/controllers.py=utf-8
