--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,6 +11,7 @@ encoding//mqo_exercises/models/allocation.py=utf-8
 encoding//mqo_exercises/models/assignment.py=utf-8
 encoding//mqo_exercises/models/exercise.py=utf-8
 encoding//mqo_exercises/models/partner.py=utf-8
+encoding//mqo_strengths/__init__.py=utf-8
 encoding//mqo_strengths/__openerp__.py=utf-8
 encoding//mqo_strengths/controllers/__init__.py=utf-8
 encoding//mqo_strengths/controllers/controllers.py=utf-8
