Refactoring. Moved survey extensions into new mqo_survey module.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -16,6 +16,9 @@ encoding//mqo_strengths/__openerp__.py=utf-8
 encoding//mqo_strengths/controllers/__init__.py=utf-8
 encoding//mqo_strengths/controllers/controllers.py=utf-8
 encoding//mqo_strengths/models/__init__.py=utf-8
+encoding//mqo_survey/__init__.py=utf-8
+encoding//mqo_survey/__openerp__.py=utf-8
+encoding//mqo_survey/models/__init__.py=utf-8
 encoding//openacademy/__init__.py=utf-8
 encoding//openacademy/__openerp__.py=utf-8
 encoding//openacademy/controllers.py=utf-8
