--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,9 +11,16 @@ encoding//mqo_exercises/models/allocation.py=utf-8
 encoding//mqo_exercises/models/assignment.py=utf-8
 encoding//mqo_exercises/models/exercise.py=utf-8
 encoding//mqo_exercises/models/learner.py=utf-8
+encoding//mqo_interest/__openerp__.py=utf-8
+encoding//mqo_interest/controllers/__init__.py=utf-8
+encoding//mqo_interest/controllers/controllers.py=utf-8
+encoding//mqo_interest/models/__init__.py=utf-8
 encoding//mqo_learner/__init__.py=utf-8
 encoding//mqo_learner/__openerp__.py=utf-8
 encoding//mqo_learner/models/__init__.py=utf-8
+encoding//mqo_program/__init__.py=utf-8
+encoding//mqo_program/__openerp__.py=utf-8
+encoding//mqo_program/models/__init__.py=utf-8
 encoding//mqo_strengths/__init__.py=utf-8
 encoding//mqo_strengths/__openerp__.py=utf-8
 encoding//mqo_strengths/controllers/__init__.py=utf-8
