[IMP] Allowed programs to be listed in the website.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -21,6 +21,8 @@ encoding//mqo_learner/__openerp__.py=utf-8
 encoding//mqo_learner/models/__init__.py=utf-8
 encoding//mqo_program/__init__.py=utf-8
 encoding//mqo_program/__openerp__.py=utf-8
+encoding//mqo_program/controllers/__init__.py=utf-8
+encoding//mqo_program/controllers/main.py=utf-8
 encoding//mqo_program/models/__init__.py=utf-8
 encoding//mqo_strengths/__init__.py=utf-8
 encoding//mqo_strengths/__openerp__.py=utf-8
